--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root {
+  display: flex;
+  /* flex-direction: row; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input {
+  width: 400px;
+  height: 20px;
+  margin-top: 10px;
+}
+
+.select-zone {
+  width: 48vw;
+}
+
+.chat-zone {
+  width: 48vw;
+}
+
+.sendText {
+  position: fixed;
+  bottom: 10px;
+}
+
+#chat-content {
+  height: 80vh;
+  overflow-y: scroll;
+  border: 1px solid black;
+}
+
+.us1 {
+  color: green;
+}
+
+.us2 {
+  color: tomato;
 }
